namespace CheckersGameProject.Core
{
    //enums
    public enum PieceType { Pawn, King}
    public enum PieceColor { Red, Black}
    public enum StatusType {NotStart, Play, Win , Draw}
    
    
}